Minor mods to the absolute width of the stepper component to fix an overflow issue on mobile browsers. Added subtle hover transition to landing pages only text

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,15 @@
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
+h3 {
+  text-shadow: 0.5px 0.5px 0.5px var(--lightUpCompliment);
+}
+
+h3:hover {
+  text-shadow: 0.5px 0.5px 0.5px var(--LightenUpPeach);
+  transition: all 0.8s ease-in-out;
+}
+
 a {
   text-decoration: none;
   text-shadow: 0.66px 0.66px 0.66px var(--cerulCompliment);
